left and center hecho de la navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,11 @@
-<header>   
-    
+<header id="navbar">
+    <div id="left_navbar">   
+        <nav id="father_icon"><img id="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></nav>
+        <nav id="title_navbar">WISSEN</nav>
+    </div>
+    <div id="center_navbar_father">
+    <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></nav>
+    <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></nav>
+    <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></nav>
+    </div>
 </header>
