--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -41,10 +41,18 @@
     align-items: center;
     padding-left: 5vw;
 }
+#center_navbar_father{
+    display: flex;
+    justify-content: center;
+    width: 65vw;
+
+}
 .center_navbar{
-    padding-left: 7vw ;
+    
     font-family: sans-serif; /**temporal*/
     font-size: 1rem;
+    padding-left: 5vw;
+    
     
 }
 .text_linked{
