--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,8 +4,13 @@
         <nav id="title_navbar">WISSEN</nav>
     </div>
     <div id="center_navbar_father">
-    <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></nav>
-    <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></nav>
-    <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></nav>
+        <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></nav>
+        <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></nav>
+        <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></nav>
+    </div>
+    <div id="right_navbar_father">
+        <nav class="right_navbar"></nav>
+        <nav class="right_navbar"></nav>
+        <nav class="right_navbar"></nav>
     </div>
 </header>
