--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,16 +1,16 @@
-<header id="navbar">
-    <div id="left_navbar">   
-        <nav id="father_icon"><img id="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></nav>
-        <nav id="title_navbar">WISSEN</nav>
-    </div>
-    <div id="center_navbar_father">
-        <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></nav>
-        <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></nav>
-        <nav class="center_navbar"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></nav>
-    </div>
-    <div id="right_navbar_father">
-        <nav class="right_navbar"></nav>
-        <nav class="right_navbar"></nav>
-        <nav class="right_navbar"></nav>
-    </div>
+<header class="navbar">
+    <ul class="left_navbar">   
+        <li class="father_icon"><img class="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></li>
+        <li class="title_navbar">WISSEN</li>
+    </ul>
+    <ul class="center_navbar_father">
+        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></li>
+        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></li>
+        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></li>
+    </ul>
+    <ul class="right_navbar_father">
+        <li class="right_navbar"></li>
+        <li class="right_navbar"></li>
+        <li class="right_navbar"></li>
+    </ul>
 </header>
