--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
-<header class="navbar">
+<header>
+    <nav class="navbar">
     <ul class="left_navbar">   
         <li class="father_icon"><img class="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></li>
         <li class="title_navbar">WISSEN</li>
@@ -13,4 +14,22 @@
         <li class="right_navbar"></li>
         <li class="right_navbar"></li>
     </ul>
+    
+    <button class="button">
+        <span></span>
+        <span></span>
+        <span></span>
+        
+    </button>
+    </nav>
+    <nav class="dropdown-container">
+        <ul class="dropdown-menu">
+            <li><a href="" class="dropdown-elements">prueba</a></li>
+            <li><a href="" class="dropdown-elements">prueba</a></li>
+            <li><a href="" class="dropdown-elements">prueba</a></li>
+            <li><a href="" class="dropdown-elements">prueba</a></li>
+        </ul>
+        
+    </nav>
+
 </header>
