--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     
     <!-- Script -->
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
+    <script src="{{url_for('static',filename='js/navbar_dropdown.js')}}"></script>
 
 </body>
 </html>
