--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
         <li class="right_navbar"></li>
     </ul>
     
-    <button class="button">
+    <button class="button_menu" id="button_menu">
         <span></span>
         <span></span>
         <span></span>
@@ -23,11 +23,11 @@
     </button>
     </nav>
     <nav class="dropdown-container">
-        <ul class="dropdown-menu">
-            <li><a href="" class="dropdown-elements">prueba</a></li>
-            <li><a href="" class="dropdown-elements">prueba</a></li>
-            <li><a href="" class="dropdown-elements">prueba</a></li>
-            <li><a href="" class="dropdown-elements">prueba</a></li>
+        <ul class="dropdown-menu" id="dropdown-menu">
+            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
+            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
+            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
+            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
         </ul>
         
     </nav>
