checkpoint 3 solo falta decorar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,32 +4,39 @@
         <li class="father_icon"><img class="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></li>
         <li class="title_navbar">WISSEN</li>
     </ul>
+
     <ul class="center_navbar_father">
         <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></li>
         <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></li>
         <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></li>
     </ul>
+
     <ul class="right_navbar_father">
         <li class="right_navbar"></li>
         <li class="right_navbar"></li>
         <li class="right_navbar"></li>
     </ul>
-    
+
+    <div class="button_container">
     <button class="button_menu" id="button_menu">
         <span></span>
         <span></span>
         <span></span>
-        
     </button>
+    </div>
     </nav>
-    <nav class="dropdown-container">
-        <ul class="dropdown-menu" id="dropdown-menu">
-            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
-            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
-            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
-            <li class="dropdown-subcontainer"><a href="" class="dropdown-elements">prueba</a></li>
-        </ul>
-        
-    </nav>
+
+    
+    <ul class="dropdown_menu" id="dropdown_menu">
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer1"><a href="" class="dropdown_elements">Proyectos</a></li>
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer2"><a href="" class="dropdown_elements">Redes</a></li>
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer3"><a href="" class="dropdown_elements">Contacto</a></li>
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer4"><a href="" class="dropdown_elements">prueba</a></li>
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer5"><a href="" class="dropdown_elements">prueba</a></li>
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer6"><a href="" class="dropdown_elements">prueba</a></li>
+        <li class="dropdown_subcontainer" id="dropdown_subcontainer7"><a href="" class="dropdown_elements">prueba</a></li>
+    </ul>
+    
+    
 
 </header>
