--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -61,6 +61,14 @@ ul{
     
     
 }
+@media only screen and (width < 620px){
+    .center_navbar{
+        display: none;
+    }
+    .text_linked{
+        display: none;
+    }
+}
 .text_linked{
     text-decoration: none;
     color: #000;
@@ -94,13 +102,19 @@ ul{
         background-color: #0002;
     }
 }
+
+.button_container{/*para evitar la compresion del el elemento button*/
+    display: flex;
+}
 .button_menu{
     background-color: transparent;
     
-    height: 5vw;
-    width: 5vw;
+    height: 40px;
+    width: 40px;
     border: none;
     cursor: pointer;
+    
+    display: block;
 }
 .button_menu span{
     margin: 4px auto;
@@ -111,31 +125,39 @@ ul{
     cursor: pointer;
 }
 
-
-.dropdown-menu{
-    background-color: #000;
-    border-color: #ffffff;
-    border: 2px 2px 2px 2px;
+.dropdown_menu{
+    background-color: transparent;
     border-style: solid;
+    border-color: transparent;
+    border-width: 2px;
     float: right;
-
-}
-.dropdown-subcontainer{
+    height: 50vh;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    margin-right: 4vw;
+    width: 25vw;
+    max-width: 0;
+    transition: 0.1s;
+    overflow: hidden;
 }
-.open_dropdown_menu{
-    max-height: 100px;
-    opacity: 0;
-    transition: 4s;
-}
-.dropdown-elements{
-    border-color: #ffffff;
-    border: 2px 2px 2px 2px;
-    border-style: solid;
-    text-align: center;
-    line-height: 60px;
-    width: 100%;
-    margin-right: 20vw;
 
+.open_dropdown_menu{
+    max-width: 25vw;
+    transition: 0.1s;
+    border-color: #fff;
+    background-color: #000;
+}
+.dropdown_subcontainer{
+    border-color:transparent;
+    border-style: solid;
+    border-width: 0 0 2px 0;
+    flex-grow: 1;
+    overflow: hidden;
+}
+.open_dropdown_subcontainer{
+    border-color: #fff;
+}
+.dropdown_elements{
+    text-align: center;
 }
