--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,7 @@
 <header class="navbar">
 
+<header>
+    <nav class="navbar">
     <ul class="left_navbar">   
         <li class="father_icon"><img class="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></li>
         <li class="title_navbar">WISSEN</li>
