--- a/templates/sign.html
+++ b/templates/sign.html
@@ -16,19 +16,19 @@
             <form action="{{login}}" method="POST" class="sign_form">
 
                     <label for="name_user">Nombre: </label>
-                    <input type="text" name="name_user">
+                    <input type="text" name="name_user" placeholder="Nombre">
             
                     <label for="surname_user">Apellido: </label>
-                    <input type="text" name="surname_user">
+                    <input type="text" name="surname_user" placeholder="Apellido">
             
                     <label for="email">E-mail: </label>
-                    <input type="email" name="email" id="">
+                    <input type="email" name="email" id="" placeholder="E-mail">
             
                     <label for="password">Crear contrasena: </label>
-                    <input type="password" name="password" id="">
+                    <input type="password" name="password" id="" placeholder="contrasena">
             
                     <label for="password-verify">Repetir contrasena: </label>
-                    <input type="password" name="password-verify" id="">
+                    <input type="password" name="password-verify" id="" placeholder="repetir contrasena">
             
                     <input type="submit" value="Registrarse">
                     
