--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -2,8 +2,11 @@ ul{
     list-style-type: none;
 }
 
+header {
+    color:#fff;
+}
 .navbar{
-    background-color: #fff7;
+    background: #2b25d954;
     height: 15vh;
     width: 95vw;
     margin: auto;
@@ -19,6 +22,8 @@ ul{
     
 }
 .left_navbar{
+    color:#23D9B7;
+    font-weight: bold;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -71,7 +76,9 @@ ul{
 }
 .text_linked{
     text-decoration: none;
-    color: #000;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
     
     padding: 1.1vw;
     box-sizing: border-box;
@@ -88,6 +95,7 @@ ul{
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+/*
 @keyframes change-color1 {
     from{
         background-color: #0002;
@@ -101,6 +109,69 @@ ul{
     to{
         background-color: #0002;
     }
+}*/
+
+#contacto {
+    background: #1ebda0;
+}
+.button_container{/*para evitar la compresion del el elemento button*/
+    display: none;
+}
+.button_menu{
+    background-color: transparent;
+    
+    height: 40px;
+    width: 40px;
+    border: none;
+    cursor: pointer;
+    
+    display: block;
+}
+.button_menu span{
+    margin: 4px auto;
+    width: 60%;
+    height: 4px;
+    background-color:  #1ebda0;
+    display: block;
+    cursor: pointer;
+    color:#fff;
+}
+
+.dropdown_menu{
+    background-color: transparent;
+    border-style: solid;
+    border-color: transparent;
+    border-width: 2px;
+    float: right;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-right: 4vw;
+    width: 25vw;
+    max-width: 0;
+    transition: 0.1s;
+    overflow: hidden;
+}
+
+.open_dropdown_menu{
+    max-width: 25vw;
+    transition: 0.1s;
+    border-color: #fff;
+    background-color: #000;
+}
+.dropdown_subcontainer{
+    border-color:transparent;
+    border-style: solid;
+    border-width: 0 0 2px 0;
+    flex-grow: 1;
+    overflow: hidden;
+}
+.open_dropdown_subcontainer{
+    border-color: #fff;
+}
+.dropdown_elements{
+    text-align: center;
 }
 
 .button_container{/*para evitar la compresion del el elemento button*/
