--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,14 +1,15 @@
 <header>
     <nav class="navbar">
     <ul class="left_navbar">   
-        <li class="father_icon"><img class="icon" src="https://r.mobirisesite.com/487813/assets/images/photo-1488229297570-58520851e868.jpeg" alt="imagen temporal" ></li>
+        <li class="father_icon"><img class="icon" src="../static/picture/vintage-1751222_640.png" alt="imagen temporal" ></li>
         <li class="title_navbar">WISSEN</li>
     </ul>
 
     <ul class="center_navbar_father">
+        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Inicio</a></li>
         <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></li>
-        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Redes(temp)</a></li>
-        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Contacto</a></li>
+        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Blog</a></li>
+        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank" id="contacto">Contacto</a></li>
     </ul>
     
 
