--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 
 {% block content%}
     {% include 'navbar.html' %}
-    <h1>tranquilo xd</h1>
+    
+    <!-- Only for a example-->
+    <center><h1 style="color:white;">Bienvenido</h1></center>
 
 {% endblock %}
