--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,42 +1,40 @@
 <header>
     <nav class="navbar">
-    <ul class="left_navbar">   
-        <li class="father_icon"><img class="icon" src="../static/picture/vintage-1751222_640.png" alt="imagen temporal" ></li>
-        <li class="title_navbar">WISSEN</li>
-    </ul>
+        <ul class="left_navbar">   
+            <li class="father_icon"><img class="icon" src="../static/picture/vintage-1751222_640.png" alt="imagen temporal" ></li>
+            <li class="title_navbar">WISSEN</li>
+        </ul>
 
-    <ul class="center_navbar_father">
-        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Inicio</a></li>
-        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></li>
-        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Blog</a></li>
-        <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank" id="contacto">Contacto</a></li>
-    </ul>
+        <ul class="center_navbar_father">
+            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Inicio</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Proyectos</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank">Blog</a></li>
+            <li class="center_navbar animated"><a class="text_linked" href="https://www.google.co.uk/" target="_blank" id="contacto">Contacto</a></li>
+        </ul>
     
 
-    <ul class="right_navbar_father">
-        <li class="right_navbar"></li>
-        <li class="right_navbar"></li>
-        <li class="right_navbar"></li>
-    </ul>
+        <ul class="right_navbar_father">
+            <li class="right_navbar"></li>
+            <li class="right_navbar"></li>
+            <li class="right_navbar"></li>
+        </ul>
 
-    <div class="button_container">
-    <button class="button_menu" id="button_menu">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-    </div>
+        <div class="button_container">
+            <button class="button_menu" id="button_menu">
+                <img src='static\picture\three_lines.png';" alt="">
+            </button>
+        </div>
     </nav>
 
     
     <ul class="dropdown_menu" id="dropdown_menu">
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer1"><a href="" class="dropdown_elements">Proyectos</a></li>
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer2"><a href="" class="dropdown_elements">Redes</a></li>
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer3"><a href="" class="dropdown_elements">Contacto</a></li>
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer4"><a href="" class="dropdown_elements">prueba</a></li>
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer5"><a href="" class="dropdown_elements">prueba</a></li>
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer6"><a href="" class="dropdown_elements">prueba</a></li>
-        <li class="dropdown_subcontainer" id="dropdown_subcontainer7"><a href="" class="dropdown_elements">prueba</a></li>
+        <li><a href="" class="dropdown_elements">Proyectos</a></li>
+        <li><a href="" class="dropdown_elements">Redes</a></li>
+        <li><a href="" class="dropdown_elements">Contacto</a></li>
+        <li><a href="" class="dropdown_elements">prueba</a></li>
+        <li><a href="" class="dropdown_elements">prueba</a></li>
+        <li><a href="" class="dropdown_elements">prueba</a></li>
+        <li><a href="" class="dropdown_elements">prueba</a></li>
     </ul>
     
     
