--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: sans-serif;
-    background-image: url('');
+    background-image: url('../picture/BodyBackground2.png');
     background-size: 100%;
     background-repeat: no-repeat;
     background-position-x: center;
