--- a/templates/sign.html
+++ b/templates/sign.html
@@ -16,7 +16,7 @@
             <form action="{{login}}" method="POST" class="sign_form">
 
                     <label for="name_user">Nombre: </label>
-                    <input type="text" name="name_user">
+                    <input type="text" name="name_user" placeholder="usuario">
             
                     <label for="surname_user">Apellido: </label>
                     <input type="text" name="surname_user">
