--- a/templates/sign.html
+++ b/templates/sign.html
@@ -9,14 +9,14 @@
 
 {% include 'navbar.html' %}
 
-    <h1 class="title_form-sign">Sign up</h1>
+    <h1 class="title_form-sign">Registrarse</h1>
 
     <div class="sign_form-content">
 
             <form action="{{login}}" method="POST" class="sign_form">
 
                     <label for="name_user">Nombre: </label>
-                    <input type="text" name="name_user" placeholder="usuario">
+                    <input type="text" name="name_user">
             
                     <label for="surname_user">Apellido: </label>
                     <input type="text" name="surname_user">
@@ -31,7 +31,13 @@
                     <input type="password" name="password-verify" id="">
             
                     <input type="submit" value="Registrarse">
-                    
+                <div class="div-precontainer-recordarme">
+                    <div class="div-recordarme">
+                    <input type="checkbox" class="checkbox-recordarme"  name="" id="checkbox-recordarme">
+                    <label for="checkbox-recordarme" class="label-recordarme">Recordarme</label>
+                    </div>
+                    <a href="google.com">Olvide mi contraseña</a>
+                </div>
             </form>
 
     </div>
