--- a/static/css/sign.css
+++ b/static/css/sign.css
@@ -16,11 +16,11 @@
     box-shadow: 0px 0px 2px 1px #aaa3;
     background: #0003;
     display: flex;
-    width: 35em;
+    width: 30em;
     max-width: 1030px;
     flex-wrap: wrap;
     align-content: center;
-    padding: 40px;
+    padding: 2.5em;
     border-radius: 25px;
 }
 
