--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,6 @@
 <header>
     <nav class="navbar">
         <ul class="left_navbar">   
-            <li class="father_icon"><img class="icon" src="../static/picture/vintage-1751222_640.png" alt="imagen temporal" ></li>
             <li class="title_navbar">WISSEN</li>
         </ul>
 
@@ -19,7 +18,7 @@
             <li class="right_navbar"></li>
         </ul>
 
-        <div class="button_container">
+        <div class="button_container" style="display:none;">
             <button class="button_menu" id="button_menu">
                 <img src='static\picture\three_lines.png';" alt="">
             </button>
