--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -10,19 +10,21 @@ header {
 .navbar{
     /*background: var(--blue-green-navbar);*/
     height: 15vh;
-    width: 100vw;
+    width: 154em;
     margin: auto;
     margin-top: 2vh;
     border-radius: 10px;
     box-sizing: border-box;
+    margin-left: 3em;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
     font-size: 10px;
     max-height: 60px;
     color:var(--white);
-    
+    background-color: #0003;
+    box-shadow: 0px 0px 2px 1px #aaa3;
 }
 .left_navbar{
     color:var(--light-green);
@@ -52,7 +54,6 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-left: 5vw;
     
 }
 .center_navbar_father{
@@ -82,27 +83,26 @@ header {
     text-decoration: none;
     color: #fff;
     font-size: 20px;
-    font-weight: 500;
-    
-    padding: 1.1vw;
+    background-size: 80% 80%;
+    padding: 0.7em;
     box-sizing: border-box;
     border-radius: 8px;
-    animation-name: change-color1;
-    animation-duration: 0.2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    transition: 0.1s;
 }
 .text_linked:hover{
 
-    animation-name: change-color2;
-    animation-duration: 0.2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+    background-color: #fff2;
+    transition: 0.1s;
 }
 
 #contacto {
     background: #1ebda0;
     color:var(--black);
+    transition: 0.1s;
+}
+#contacto:hover{
+    background-color:#0d8c7a ;
+    transition: 0.1s;
 }
 .button_container{/*para evitar la compresion del el elemento button*/
     display: none;
