--- a/static/css/sign.css
+++ b/static/css/sign.css
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left:1em;
+    margin-right: 1em; 
 }
 
 .sign_form-content .sign_form {
@@ -79,6 +81,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    display: none;
 }
 .checkbox-recordarme{ /** nesesita resolverse ↓↓↓↓↓↓ */
     float: left;
