--- a/templates/index.html
+++ b/templates/index.html
@@ -7,30 +7,28 @@
 
 {% block content%}
     {% include 'navbar.html' %}
-    
+    <div>
     <!-- Only for a example-->
     <center><h1 style="color:white;">Bienvenido</h1></center>
-
     <section class="slider-container">
-
-        <div class="slider">
-                <div class="slide">
-                        <img src="../static/picture/slide/slider_1.jpg" alt="Imagen 1">
-                    </div>
-            
-                    <div class="slide">
-                        <img src="../static/picture/slide/slider_2.jpg" alt="Imagen 1">
-                    </div>
-            
-                    <div class="slide">
-                        <img src="../static/picture/slide/slider_3.jpg" alt="Imagen 1">
-                    </div>
-        </div>
-
         <button class="prev">&#10094;</button>
+        <div class="slider">
+            <div class="slide">
+                <img src="" alt="Imagen 1">
+            </div>
+            
+            <div class="slide">
+                <img src="" alt="Imagen 2">
+            </div>
+            
+            <div class="slide">
+                <img src="" alt="Imagen 3">
+            </div>
+        </div>
+        
         <button class="next">&#10095;</button>
-                  
     </section>
+    </div>
 
 
     <!-- Script for slide -->
