--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -1,47 +1,47 @@
 /*Slide for the first website's page*/
 
 .slider-container {
-  width: 100%;
   border: 1px solid white;
   display: flex;
+  flex-direction: row;
+  justify-content:stretch;
 }
 
 .slider {
   width: 90%;
   height: 250px;
   /*position: relative;*/
-  position: absolute;
 
   right: 0px;
   left: 0px;
   margin:auto;
   overflow: hidden;
+  display:flex;
+  flex-direction: row;
 }
 
 .slide {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
+  display: none;
   transition: opacity 0.5s ease-in-out;
 }
 
 .slide.active {
-  opacity: 1;
+  display: block;
 }
 
 .slide img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  color: white;
 }
 
 .prev, .next {
-  position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   font-size: 30px;
   padding: 10px;
   cursor: pointer;
