--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,5 +7,13 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
-    background-color:#000
+    background-color:#000;
+    display: flex;
+    flex-direction: column;
+}
+div{
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    background-color: #171717;
 }
