--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -18,6 +18,7 @@
   overflow: hidden;
   display:flex;
   flex-direction: row;
+  position: relative;
 }
 
 .slide {
@@ -25,12 +26,19 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  transform: translate(0);
   transition: opacity 0.5s ease-in-out;
+  position: absolute;
+
 }
 
-.slide.active {
-  display: block;
+
+.slider .slide.right {
+  transform: translate(100%);
+}
+
+.slider .slide.left {
+  transform: translate(-100%);
 }
 
 .slide img {
